GS-2115 add UserInfo for caching of user information via cookies